# api/routes/test.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"main/api/controllers"
+	"main/api/currencies"
 	"main/api/middlewares"
 	"main/lib"
 )
@@ -11,6 +12,7 @@ type TestRoutes struct {
 	logger         lib.Logger
 	handler        lib.RequestHandler
 	TestController controllers.TestController
+	testRequest    currencies.Request
 	authMiddleware middlewares.JWTAuthMiddleware
 }
 
@@ -21,7 +23,9 @@ func (s TestRoutes) Setup() {
 	{
 		api.GET("/test", s.TestController.GetTest)
 		api.GET("/test/:id", s.TestController.GetOneTest)
+		api.GET("/currency", s.testRequest.MakeRequest)
 		api.POST("/test", s.TestController.CreateTest)
+		api.POST("/currency", s.testRequest.MakePostRequest)
 		api.POST("/test/:id", s.TestController.UpdateTest)
 		api.DELETE("/test/:id", s.TestController.DeleteTest)
 	}
@@ -31,11 +35,13 @@ func (s TestRoutes) Setup() {
 func NewTestRoutes(
 	logger lib.Logger,
 	handler lib.RequestHandler,
+	testRequest currencies.Request,
 	TestController controllers.TestController,
 ) TestRoutes {
 	return TestRoutes{
 		handler:        handler,
 		logger:         logger,
+		testRequest:    testRequest,
 		TestController: TestController,
 	}
 }
